add_subdirectory("core")
add_subdirectory("serialization")
add_subdirectory("iostreams")
add_subdirectory("coroutine2")
add_subdirectory("property_tree")
add_subdirectory("beast")
add_subdirectory("locale")
add_subdirectory("testing")
add_subdirectory("datetime")
add_subdirectory("regex")
add_subdirectory("variant")
add_subdirectory("range")
add_subdirectory("multiindex")
add_subdirectory("filesystem")
add_subdirectory("tribool")
add_subdirectory("stacktrace")
add_subdirectory("log")
add_subdirectory("algorithm")
add_subdirectory("exception")
add_subdirectory("process")
add_subdirectory("interprocess")
add_subdirectory("program_options")
add_subdirectory("thread")
add_subdirectory("random")